# teacher_ict_app

./: .gitignore  README.md  pyproject.toml  ruff.toml
core/: models.py
project/: settings.py
